--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,15 +1,24 @@
 ---
-import { type CollectionEntry, getEntry } from "astro:content";
+import type { GetStaticPaths } from "astro";
+import { type CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 import LikeButton from "~/components/LikeButton.astro";
 import { Newsletter } from "~/components/Newsletter";
+import { getCollection } from "astro:content";
 
-export const prerender = false;
+export const getStaticPaths: GetStaticPaths = async () => {
+  const posts = await getCollection("blog");
+  return posts.map((p) => ({
+    params: { slug: p.slug },
+    props: { post: p },
+  }));
+};
 
-type Props = CollectionEntry<"blog">;
+type Props = { post: CollectionEntry<"blog"> };
 
-const post = await getEntry("blog", Astro.params.slug!);
+const { post } = Astro.props;
+
 if (!post) return Astro.rewrite("/404");
 
 const { Content, headings } = await post.render();
