--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,6 +45,7 @@ const {
     <meta property="og:site_name" content="Ben Holmes" />
     <meta property="og:title" />
     <meta property="og:description" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link
       rel="preload"
       href={atkinson400url}
