--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -133,9 +133,8 @@ const { Content, headings } = await post.render();
 </style>
 
 <script>
-  import "../../components/article-scroll";
   import { controller, target } from "@github/catalyst";
-  import { progress, currentSectionIdx } from "../../components/article-scroll";
+  import { progress, currentSectionIdx } from "~/stores";
 
   @controller
   class ArticleScrollElement extends HTMLElement {
@@ -155,9 +154,8 @@ const { Content, headings } = await post.render();
             waitingOnAnimRequest = false;
             const articleRect = this.getBoundingClientRect();
             const articleHeight = this.offsetTop + articleRect.height;
-            progress.value = Math.min(
-              (window.scrollY + window.innerHeight) / articleHeight,
-              1
+            progress.set(
+              Math.min((window.scrollY + window.innerHeight) / articleHeight, 1)
             );
           });
           waitingOnAnimRequest = true;
@@ -169,8 +167,8 @@ const { Content, headings } = await post.render();
           entries.forEach((entry) => {
             if (!entry.isIntersecting) return;
             if (headings.includes(entry.target as HTMLHeadingElement)) {
-              currentSectionIdx.value = headings.indexOf(
-                entry.target as HTMLHeadingElement
+              currentSectionIdx.set(
+                headings.indexOf(entry.target as HTMLHeadingElement)
               );
             }
             let heading: HTMLHeadingElement | null = null;
@@ -187,7 +185,7 @@ const { Content, headings } = await post.render();
             if (!heading) return;
             const idx = headings.indexOf(heading);
             if (idx >= 0) {
-              currentSectionIdx.value = idx;
+              currentSectionIdx.set(idx);
             }
           });
         },
