--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -64,7 +64,7 @@ const {
     <slot name="head" />
     <title>{title}</title>
   </head>
-  <body class="bg-gray-950 text-white text-base px-4 md:px-8">
+  <body class="bg-gray-950 text-white text-base px-4 sm:px-8">
     <my-shroud
       class="fixed inset-0 invisible bg-gray-950 opacity-0 z-30 data-[visible]:opacity-80 data-[visible]:visible transition-all"
     ></my-shroud>
