--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -5,54 +5,58 @@ import WhiteboardContext from "./WhiteboardContext.astro";
 ---
 
 <WhiteboardContext>
-  <div data-grid class="group mb-8 flex max-w-[72ch] grid gap-8 mx-auto p-3">
-    <div style="grid-area: heading" class="sm:self-end mt-8">
-      <h1 class="text-9xl">
-        <span class="md:inline hidden">Hi, </span>
-        I'm <strong
-          class="bg-clip-text text-transparent bg-gradient-to-r from-[#9b5dff] to-[#6200ff]"
-          >Ben.</strong
-        >
-      </h1>
-      <p class="text-xl mb-5 text-slate-400">
-        The <span class="text-white">whiteboard guy</span> who codes kinda well.
-      </p>
-    </div>
-    <div
-      style="grid-area: buttons"
-      class="flex self-start mt-12 sm:mt-0 sm:self-start sm:flex-row flex-col-reverse gap-6"
-    >
-      <a
-        class="cursor-pointer group/btn active:scale-y-95 active:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl"
-        is="button"
-        href="#videos"
-        data-action="click:my-whiteboard#scrollToVideos"
-        data-watch-btn
+  <div
+    class="relative before:absolute before:-inset-8 sm:before:bottom-[28%] before:bottom-[50%] before:bg-gray-900 before:-z-10"
+  >
+    <div data-grid class="group mb-8 flex max-w-[72ch] grid gap-8 mx-auto p-3">
+      <div style="grid-area: heading" class="sm:self-end mt-8">
+        <h1 class="text-9xl">
+          <span class="md:inline hidden">Hi, </span>
+          I'm <strong
+            class="bg-clip-text text-transparent bg-gradient-to-r from-[#9b5dff] to-[#6200ff]"
+            >Ben.</strong
+          >
+        </h1>
+        <p class="text-xl mb-5 text-slate-400">
+          The <span class="text-white">whiteboard guy</span> who codes kinda well.
+        </p>
+      </div>
+      <div
+        style="grid-area: buttons"
+        class="flex self-start mt-12 sm:mt-0 sm:self-start sm:flex-row flex-col-reverse gap-6"
       >
-        <span
-          class="group-active/btn:scale-105 group-active/btn:rounded-2xl group-active/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4"
+        <a
+          class="cursor-pointer group/btn active:scale-y-95 active:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl"
+          is="button"
+          href="#videos"
+          data-action="click:my-whiteboard#scrollToVideos"
+          data-watch-btn
         >
-          Watch <Icon name="arrow-down" class="mx-[-3px] mb-[2px]" />
-        </span>
-      </a>
-      <button
-        class="group/btn disabled:brightness-[80%] disabled:scale-y-95 disabled:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl"
-        data-draw-btn
-        data-target="my-whiteboard.drawBtn"
-        data-action="click:my-whiteboard#startDrawing"
+          <span
+            class="group-active/btn:scale-105 group-active/btn:rounded-2xl group-active/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4"
+          >
+            Watch <Icon name="arrow-down" class="mx-[-3px] mb-[2px]" />
+          </span>
+        </a>
+        <button
+          class="group/btn disabled:brightness-[80%] disabled:scale-y-95 disabled:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl"
+          data-draw-btn
+          data-target="my-whiteboard.drawBtn"
+          data-action="click:my-whiteboard#startDrawing"
+        >
+          <span
+            class="group-disabled/btn:scale-105 group-disabled/btn:rounded-2xl group-disabled/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4"
+          >
+            Draw <Icon name="draw" class="mb-[2px]" />
+          </span>
+        </button>
+      </div>
+      <div
+        style="grid-area: whiteboard"
+        class="place-self-center sm:min-w-56 mr-[-30%] relative group-[[data-drawing]]:z-30 group-[[data-drawing]]:fixed sm:relative! group-[[data-drawing]]:mr-0 group-[[data-drawing]]:top-4 group-[[data-drawing]]:left-4 sm:top-0! sm:left-0! sm:mr-auto"
       >
-        <span
-          class="group-disabled/btn:scale-105 group-disabled/btn:rounded-2xl group-disabled/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4"
-        >
-          Draw <Icon name="draw" class="mb-[2px]" />
-        </span>
-      </button>
-    </div>
-    <div
-      style="grid-area: whiteboard"
-      class="place-self-center sm:min-w-56 mr-[-30%] relative group-[[data-drawing]]:z-30 group-[[data-drawing]]:fixed sm:relative! group-[[data-drawing]]:mr-0 group-[[data-drawing]]:top-4 group-[[data-drawing]]:left-4 sm:top-0! sm:left-0! sm:mr-auto"
-    >
-      <Whiteboard />
+        <Whiteboard />
+      </div>
     </div>
   </div>
 </WhiteboardContext>
