--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -64,12 +64,12 @@ const {
     <slot name="head" />
     <title>{title}</title>
   </head>
-  <body class="bg-gray-950 text-white text-base px-4 sm:px-8">
+  <body class="bg-gray-950 text-white text-base">
     <my-shroud
       class="fixed inset-0 invisible bg-gray-950 opacity-0 z-30 data-[visible]:opacity-80 data-[visible]:visible transition-all"
     ></my-shroud>
     <Nav headings={headings} />
-    <div>
+    <div class="px-4 sm:px-8">
       <slot />
     </div>
     <style is:global>
