fix: sticky nav mobile safari

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,7 +27,7 @@ function isMatch(urlPath: string, linkPath: string) {
 }
 ---
 
-<nav-open data-open class="group sticky z-20 top-0">
+<nav-open data-open class="group block sticky z-20 top-0">
   <nav class="max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5">
     {headings?.length ? <Toc {headings} /> : null}
     <ul id={id} class="flex gap-6 ml-auto items-center">
