--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -10,12 +10,11 @@
   BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
   "Open Sans", "Helvetica Neue", sans-serif;
 
-  --transition-timing-function-spring: var(--ease-spring-3);
-  --transition-timing-function-spring-1: var(--ease-spring-1);
-  --transition-timing-function-spring-2: var(--ease-spring-2);
-  --transition-timing-function-spring-3: var(--ease-spring-3);
-  --transition-timing-function-spring-4: var(--ease-spring-4);
-  --transition-timing-function-spring-5: var(--ease-spring-5);
+  --transition-timing-function-spring-1: cubic-bezier(0, 1.49, 0.38, 0.86);
+  --transition-timing-function-spring-2: cubic-bezier(0.02, 1.63, 0.39, 0.81);
+  --transition-timing-function-spring-3: cubic-bezier(0.02, 1.72, 0.43, 0.79);
+  --transition-timing-function-spring-4: cubic-bezier(0.01, 1.8, 0.41, 0.76);
+  --transition-timing-function-spring-5: cubic-bezier(0.01, 1.9, 0.41, 0.76);
 
   --width-prose: 60ch;
 
@@ -37,4 +36,14 @@
 
   --color-primary: #6200ff;
   --color-primary-light: #a08aff;
+}
+
+@supports (transition-timing-function: linear()) {
+  @theme {
+  --transition-timing-function-spring-1: var(--ease-spring-1);
+  --transition-timing-function-spring-2: var(--ease-spring-2);
+  --transition-timing-function-spring-3: var(--ease-spring-3);
+  --transition-timing-function-spring-4: var(--ease-spring-4);
+  --transition-timing-function-spring-5: var(--ease-spring-5);
+  }
 }
