--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,6 +2,7 @@
 import type { MarkdownHeading } from "astro";
 import Toc from "./TOC.astro";
 import { scope } from "simple:scope";
+import { Icon } from "astro-icon/components";
 
 type Props = {
   headings: MarkdownHeading[] | undefined;
@@ -30,6 +31,38 @@ function isMatch(urlPath: string, linkPath: string) {
 <nav-open data-open class="group block sticky z-20 top-0">
   <nav class="max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5">
     {headings?.length ? <Toc {headings} /> : null}
+    <h2 class="sr-only">Social links</h2>
+    <ul class="text-slate-200 flex gap-4 items-center z-20">
+      <li
+        class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
+      >
+        <a href="https://youtube.com/@bholmesdev"
+          ><Icon name="youtube" title="Youtube" size={28} /></a
+        >
+      </li>
+      <li
+        class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
+      >
+        <a href="https://x.com/bholmesdev"
+          ><Icon name="x" title="X / Twitter" size={28} /></a
+        >
+      </li>
+      <li
+        class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
+      >
+        <a href="https://github.com/bholmesdev"
+          ><Icon name="github" title="GitHub" size={24} /></a
+        >
+      </li>
+      <li
+        class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
+      >
+        <a href="https://twitch.tv/bholmesdev"
+          ><Icon name="twitch" title="Twitch" size={24} /></a
+        >
+      </li>
+    </ul>
+    <h2 class="sr-only">Site links</h2>
     <ul id={id} class="flex gap-6 ml-auto items-center">
       {
         links.map((l, idx) => (
