fix: toc z index

--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -10,7 +10,7 @@ type Props = {
 const { headings } = Astro.props;
 ---
 
-<my-toc>
+<my-toc class="block z-10">
   <div class="panel bg-gray-950">
     <div class="progress-container">
       <progress data-target="my-toc.progress" max="1"></progress>
