--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import IBen from "../components/iBen/Frame.astro";
 ---
 
 <BaseLayout>
-  <main>
+  <main class="overflow-hidden">
     <Heading />
     <IBen />
   </main>
