--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -8,14 +8,16 @@ import { Icon } from "astro-icon/components";
 const showcaseSrc = getImgSrc(showcaseVideo);
 ---
 
-<div class="mt-24 text-center">
+<div class="mt-24 text-center max-w-prose mx-auto">
   <h2 class="text-8xl mb-4 font-heading">
-    I make <span class="text-cyan-300 font-bold">videos.</span>
+    I make <span class="text-cyan-300 font-bold">videos</span>
   </h2>
-  <p class="text-slate-400 text-xl">
-    About the hardest parts of <strong class="font-normal text-slate-50"
-      >web development.</strong
-    >
+  <p class="text-slate-400 text-xl leading-9">
+    About the hardest parts of web dev. <strong
+      class="text-slate-50 animate-pulse"
+      ><a href="https://youtube.com/@bholmesdev?sub_confirmation=1">Subscribe</a
+      ></strong
+    > for practical examples, diagrams, and 60 second explainers.
   </p>
 </div>
 <my-computer id="videos" class="sm:px-6 px-2">
