fix: better video mobile margins

--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -20,7 +20,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     > for practical examples, diagrams, and 60 second explainers.
   </p>
 </div>
-<my-computer id="videos" class="sm:px-6 px-2">
+<my-computer id="videos" class="block sm:px-6 -mx-3">
   <div data-container class="py-8 max-w-prose mx-auto grid relative">
     <img
       data-glow
