chore: copyright footer

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -72,6 +72,11 @@ const {
     <div>
       <slot />
     </div>
+    <footer>
+      <p class="text-center py-8 text-sm">
+        &copy; 2020-present Ben Holmes. All rights reserved.
+      </p>
+    </footer>
     <style is:global>
       h1 {
         font-family: var(--font-family-heading);
