chore: content min height

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,7 +69,7 @@ const {
       class="fixed inset-0 invisible bg-gray-950 opacity-0 z-30 data-[visible]:opacity-80 data-[visible]:visible transition-all"
     ></my-shroud>
     <Nav headings={headings} />
-    <div>
+    <div class="min-h-[80dvh]">
       <slot />
     </div>
     <footer>
